--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,10 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_jwt
 spring.datasource.username=sa
 spring.datasource.password=sa2003#
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Pool de conexiones (opcional pero recomendado)
+# Pool de conexiones
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
@@ -28,14 +24,63 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+# ===============================
+# CONFIGURACIÓN WEBSOCKET
+# ===============================
+# Habilitar WebSocket
+spring.websocket.enabled=true
+# Tamaño del buffer de mensajes
+spring.websocket.buffer-size=51200
+# Tiempo de espera para enviar mensajes (ms)
+spring.websocket.send-timeout=60000
+# Tiempo de espera para mensajes grandes (ms)
+spring.websocket.send-buffer-size-limit=51200
+
+# ===============================
+# CONFIGURACIÓN JWT
+# ===============================
+# Expiración del token (5 minutos = 300000 ms, 1 hora = 3600000 ms)
+jwt.expiration=3600000
+jwt.secret=miClaveSecretaParaJWTQueDebeSerLargaYSegura1234567890
+
+# ===============================
+# CONFIGURACIÓN LOGGING
+# ===============================
 # Para desarrollo: mostrar consultas SQL con parámetros
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
-#logging.level.org.springframework.security=DEBUG
+# Logging para WebSocket y Chat
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.security.web=DEBUG
 logging.level.com.javadevs.springapirest=DEBUG
+logging.level.com.alibou.websocket=DEBUG
+
+# Logger específico para el chat
+logging.level.com.javadevs.springapirest.chat=INFO
+logging.level.com.alibou.websocket.chat=INFO
+
+# Formato de logs
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Archivo de log
+logging.file.name=logs/spring-chat.log
+logging.file.path=./logs
+
+# ===============================
+# CONFIGURACIÓN CORS
+# ===============================
+# CORS Configuration
+spring.web.cors.allowed-origins=http://127.0.0.1:5500,http://localhost:5500,http://localhost:3000,http://localhost:8080
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.web.cors.allowed-headers=*
+spring.web.cors.exposed-headers=Authorization,Access-Control-Allow-Origin,Access-Control-Allow-Credentials
+spring.web.cors.allow-credentials=true
 
 # ===============================
 # CONFIGURACIÓN SPRING SECURITY
 # ===============================
+# Habilitar logs de seguridad
 logging.level.org.springframework.security=DEBUG
